Build wheels for Python 3.9

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -207,13 +207,13 @@ jobs:
     strategy:
       matrix:
         os_python: [
-          {"os": "ubuntu-latest", "python": "cp36-* cp37-* cp38-*"},
-          {"os": "macos-latest", "python": "cp36-* cp37-* cp38-*"},
-          {"os": "windows-latest", "python": "cp36-* cp37-* cp38-*"},
+          {"os": "ubuntu-latest", "python": "cp36-* cp37-* cp38-* cp39-*"},
+          {"os": "macos-latest", "python": "cp36-* cp37-* cp38-* cp39-*"},
+          {"os": "windows-latest", "python": "cp36-* cp37-* cp38-* cp39-*"},
         ]
         arch: [auto]
         include:
-          - os_python: {"os": "ubuntu-latest", "python": "cp36-* cp37-* cp38-*"}
+          - os_python: {"os": "ubuntu-latest", "python": "cp36-* cp37-* cp38-* cp39-*"}
             arch: aarch64
     steps:
     - name: Download python source distribution from artifacts
